@@ -1,5 +1,13 @@
 #!/usr/bin/make -f
 
+SOURCE_NAME    := xserver-xorg-video-intel
+SOURCE_VERSION := $(shell dpkg-parsechangelog | awk -F': ' '/^Version: / {print $$2}')
+BUILDER        := $(shell dpkg-parsechangelog | awk -F': ' '/^Maintainer: / {print $$2}')
+
+# Borrowed from the server (see 72ca1fdf2f for reference):
+override_dh_auto_configure:
+	dh_auto_configure -- --with-builderstring="$(SOURCE_NAME) $(SOURCE_VERSION) ($(BUILDER))"
+
 # Install in debian/tmp to retain control through dh_install:
 override_dh_auto_install:
 	dh_auto_install --destdir=debian/tmp
