@@ -3,6 +3,9 @@ xserver-xorg-video-intel (2:2.16.901-1) UNRELEASED; urgency=low
   * New upstream release candidate.
   * Add a libpixman-1-dev build-dep: 0.16 is enough for a regular build,
     but enabling SNA would pull 0.23.
+  * Pass --with-builderstring. At the moment, it's only needed when
+    enabling SNA (which we don't, following upstream's default), but let's
+    do that right now.
 
  -- Cyril Brulebois <kibi@debian.org>  Mon, 07 Nov 2011 22:43:36 +0100
 
